Managed to solve the regular excercises. Gonna think about the stretch exercise...

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,30 +1,50 @@
 .characterEditor {
-  padding-top: 128px;
-  padding-bottom: 64px;
+    padding-top: 128px;
+    padding-bottom: 64px;
 }
 
 .maxWidthWrapper {
+    position: relative;
 }
 
 .header {
-  padding-bottom: 64px;
+    position: relative;
+    max-width: 65%;
+    padding-bottom: 64px;
 }
 
 .title {
-  font-size: 2.5rem;
-  font-weight: 600;
-  margin-top: 0;
-  margin-bottom: 16px;
-  letter-spacing: -0.5px;
+    font-size: 2.5rem;
+    font-weight: 600;
+    margin-top: 0;
+    margin-bottom: 16px;
+    letter-spacing: -0.5px;
 }
 
 .description {
-  font-size: 1.25rem;
-  margin: 0;
+    font-size: 1.25rem;
+    margin: 0;
 }
 
 .characterWrapper {
+    top: 128px;
+    right: 0;
+    position: fixed;
+    min-height: 500px;
+    width: 35%;
 }
 
 .controlColumn {
+    position: relative;
+    max-width: 50%;
+}
+
+.backgroundBar {
+    height: 40%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: hsl(195deg, 20%, 86%);
+    /*color: black;*/
 }
